--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
-  <div class="bg"></div>
+<app-root></app-root>
+<div class="bg">
+  <div class="copyright">
+    <div class="help">F11 = full screen</div>
+    <div class="content"><i>Bron:</i>
+      © <a href="https://www.autismecentraal.com" target="_blank">Autisme Centraal</a>
+    </div>
+    <div class="help2">[Ctrl]-scroll to zoom</div>
+  </div>
+</div>
 </body>
 </html>
